fix the layout shifting of elements on hover

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 @theme {
-  --font-sans: "Syne", ui-sans-serif, sans-serif;
-  --font-sans2: "Montserrat", ui-sans-serif, sans-serif;
+  --font-sans: sans-serif;
+  --font-sans2: sans-serif;
 
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -18,7 +18,8 @@
       format("woff2"),
     url("/zoltan-on-software/fonts/Syne/Syne-VariableFont.ttf")
       format("truetype");
-  font-weight: 100 900;
+  font-optical-sizing: auto;
+  font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
@@ -29,7 +30,8 @@
       format("woff2"),
     url("/zoltan-on-software/fonts/Montserrat/Montserrat-VariableFont.ttf")
       format("truetype");
-  font-weight: 100 900;
+  font-optical-sizing: auto;
+  font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
@@ -58,25 +60,23 @@
   }
 
   .sidebar .nav a {
-    border-bottom: 1px solid var(--color-secondary-text);
-    text-align: end;
     font-weight: 100;
     text-transform: lowercase;
     transition:
-      transform 0.2s ease,
-      font-size 0.2s ease;
+      transform 0.15s cubic-bezier(0.62, 0.16, 0.13, 1.01),
+      font-size 0.15s cubic-bezier(0.62, 0.16, 0.13, 1.01);
   }
 
   .sidebar .icons a {
     transition:
-      transform 0.2s ease,
-      font-size 0.2s ease;
+      transform 0.15s cubic-bezier(0.62, 0.16, 0.13, 1.01),
+      font-size 0.15s cubic-bezier(0.62, 0.16, 0.13, 1.01);
   }
 
   @media (min-width: 640px) {
     .sidebar a:hover {
       transform: scale(1.1);
-      font-size: 1.4rem;
+      font-size: 1.2rem;
     }
   }
 }
